<resources>
    <string name="app_name">Dodolan</string>
    <string name="statistik">Statistik Keuangan</string>
    <string name="balance_title">Penghasilan per Bulan</string>
    <string name="profit_title">Untung per Bulan</string>
    <string name="order_title">Penjualan per Bulan</string>
    <string name="debt_title">Hutang per Bulan</string>
    <string name="login">Login</string>
    <string name="username_email">Username/Email</string>
    <string name="Password">Password</string>
    <string name="no_acc">Belum memiliki akun?</string>
    <string name="has_acc">Sudah memiliki akun ?</string>
    <string name="register">Register</string>

    <string name="nama_menu">Nama Menu</string>
    <string name="registerbutton">Register</string>
</resources>