<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/login"
                    android:background="@drawable/mybutton"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent">

                </Button>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="280dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/button_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.905">

                    <EditText
                        android:id="@+id/editTextTextEmailAddress3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:autofillHints="@string/app_name"
                        android:ems="10"
                        android:hint="@string/username_email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:autofillHints="@string/app_name"
                        android:ems="10"
                        android:hint="@string/Password"
                        android:inputType="textPassword" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_acc"
                    android:textColor="#ffff"
                    android:textSize="8pt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_login"
                    app:layout_constraintVertical_bias="1" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="#094776"
                    android:textSize="8pt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/reg"
                    app:layout_constraintTop_toTopOf="@id/reg"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintTop_toBottomOf="@+id/button_login" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="137dp"
                    app:layout_constraintBottom_toTopOf="@+id/cardView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ContentDescription" />


            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>